--- a/src/app/app/payment.html
+++ b/src/app/app/payment.html
@@ -7,6 +7,7 @@
           
               <mat-card class="col-12 mt-2" style="background:none">
                
+
                 <mat-card-header class="mt-3 ml-3" style="background:none">
           
                   <div class="alert alert-warning mt-2 mb-2" role="alert" *ngIf="message.message && !message.error">
@@ -30,7 +31,7 @@
                     <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
                       <mat-expansion-panel-header class="row" style="background:none">
                         <mat-panel-title class="col-9">
-                          <h6 class="text-left"><img [src]="'./assets/img/logo-mtn.png'" mat-card-avatar class="avatar"
+                          <h6 class="text-left"><img [src]="'/assets/img/logo-mtn.png'" mat-card-avatar class="avatar"
                               style="font-weight:bold"> Pay with Mobile Money</h6>
                         </mat-panel-title>
           
@@ -89,9 +90,9 @@
                     <mat-expansion-panel style="background:none" [expanded]="step === 1" (opened)="setStep(1)" hideToggle >
                       <mat-expansion-panel-header class="row">
                         <mat-panel-title class="col-9">
-                          <h6 class="text-left"><img [src]="'./assets/img/visa.png'" mat-card-avatar class="avatar"
+                          <h6 class="text-left"><img [src]="'/assets/img/visa.png'" mat-card-avatar class="avatar"
                               style="font-weight:bold">
-                            <img [src]="'./assets/img/mastercard.png'" mat-card-avatar class="avatar" style="font-weight:bold">
+                            <img [src]="'/assets/img/mastercard.png'" mat-card-avatar class="avatar" style="font-weight:bold">
                             Pay with Card</h6>
                         </mat-panel-title>
           
