--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,18 +1,20 @@
 <mat-card style="background:none">
-    <loading-indicator [isVisible]="(loading | async)" class="overlay"></loading-indicator>
+  <loading-indicator [isVisible]="(loading | async)" class="overlay"></loading-indicator>
   <mat-card-header style="background:none">
 
-    <div class="alertWarning" style="margin-right:20px;margin-bottom:10px"  role="alert" *ngIf="message.message && !message.error">
-   
+    <div class="alertWarning" style="margin-right:20px;margin-bottom:10px" role="alert"
+      *ngIf="message.message && !message.error">
+
       <p style="padding:20px">{{message.message}}</p>
     </div>
 
-    <div class="alertDanger"  style="margin-right:20px;margin-bottom:10px"  *ngIf="message.message && message.error" role="alert">
-     
+    <div class="alertDanger" style="margin-right:20px;margin-bottom:10px" *ngIf="message.message && message.error"
+      role="alert">
+
       <p style="padding:20px">{{message.message?message.message:'Something went wrong! try again!'}}</p>
     </div>
 
-  
+
   </mat-card-header>
 
   <mat-card-content>
@@ -24,7 +26,7 @@
             <table>
               <tr>
                 <td>
-                  <img [src]="'./assets/img/logo-mtn.png'" mat-card-avatar class="avatar" style="font-weight:bold">
+                  <img [src]="'/assets/img/logo-mtn.png'" mat-card-avatar class="avatar" style="font-weight:bold">
 
                 </td>
                 <th> Pay with Mobile Money</th>
@@ -52,7 +54,7 @@
             </mat-error>
           </mat-error>
 
-         
+
 
 
 
@@ -78,8 +80,8 @@
             <table>
               <tr>
                 <td>
-                  <img [src]="'./assets/img/visa.png'" mat-card-avatar class="avatar" style="font-weight:bold">
-                  <img [src]="'./assets/img/mastercard.png'" mat-card-avatar class="avatar" style="font-weight:bold">
+                  <img [src]="'/assets/img/visa.png'" mat-card-avatar class="avatar" style="font-weight:bold">
+                  <img [src]="'/assets/img/mastercard.png'" mat-card-avatar class="avatar" style="font-weight:bold">
 
                 </td>
                 <th> Pay with Credit Card</th>
@@ -89,81 +91,83 @@
 
 
         </mat-expansion-panel-header>
-<hr>
-<form autocomplete="off" [formGroup]="cardForm" class="mt-3" (ngSubmit)="submitCard()" style="background:none">
+        <hr>
+        <form autocomplete="off" [formGroup]="cardForm" class="mt-3" (ngSubmit)="submitCard()" style="background:none">
 
 
 
-    <mat-form-field appearance="outline" style="width:100%">
-      <mat-label>Enter Card Number:</mat-label>
-      <input matInput formControlName="cardNumber" style="width:100%" placeholder="Enter Card Number">
+          <mat-form-field appearance="outline" style="width:100%">
+            <mat-label>Enter Card Number:</mat-label>
+            <input matInput formControlName="cardNumber" style="width:100%" placeholder="Enter Card Number">
 
-    </mat-form-field>
+          </mat-form-field>
 
-    <mat-error *ngIf="cardNumber.invalid && (cardNumber.dirty || cardNumber.touched)" style="background:none">
-        Card number invalid or missing.
-    </mat-error>
-    <table style="width: 100%;">
-        <tr>
-<td>
-    <mat-form-field appearance="outline" style="width:100%">
-        <mat-label>Enter Expiry Month:</mat-label>
-        <input matInput formControlName="expirationMonth" style="width:100%" placeholder="Enter Expiry Month">
-  
-      </mat-form-field>
-  
-      <mat-error *ngIf="expirationMonth.invalid && (expirationMonth.dirty || expirationMonth.touched)" style="background:none">
-        Expiry month invalid or missing.
-      </mat-error>
+          <mat-error *ngIf="cardNumber.invalid && (cardNumber.dirty || cardNumber.touched)" style="background:none">
+            Card number invalid or missing.
+          </mat-error>
+          <table style="width: 100%;">
+            <tr>
+              <td>
+                <mat-form-field appearance="outline" style="width:100%">
+                  <mat-label>Enter Expiry Month:</mat-label>
+                  <input matInput formControlName="expirationMonth" style="width:100%" placeholder="Enter Expiry Month">
 
-</td>
+                </mat-form-field>
 
-<td>
-    <mat-form-field appearance="outline" style="width:100%">
-        <mat-label>Enter Expiry Year:</mat-label>
-        <input matInput formControlName="expirationYear" style="width:100%" placeholder="Enter Expiry Year">
-  
-      </mat-form-field>
-  
-      <mat-error *ngIf="expirationYear.invalid && (expirationYear.dirty || expirationYear.touched)" style="background:none">
-        Expiry year invalid or missing.
-      </mat-error>
+                <mat-error *ngIf="expirationMonth.invalid && (expirationMonth.dirty || expirationMonth.touched)"
+                  style="background:none">
+                  Expiry month invalid or missing.
+                </mat-error>
 
-</td>
+              </td>
 
+              <td>
+                <mat-form-field appearance="outline" style="width:100%">
+                  <mat-label>Enter Expiry Year:</mat-label>
+                  <input matInput formControlName="expirationYear" style="width:100%" placeholder="Enter Expiry Year">
 
-<td>
-    <mat-form-field appearance="outline" style="width:100%">
-        <mat-label>Enter Security Code:</mat-label>
-        <input matInput formControlName="ccv" style="width:100%" placeholder="Enter Security Code">
-  
-      </mat-form-field>
-  
-      <mat-error *ngIf="ccv.invalid && (ccv.dirty || ccv.touched)" style="background:none">
-        Security Code invalid or missing.
-      </mat-error>
+                </mat-form-field>
 
-</td>
+                <mat-error *ngIf="expirationYear.invalid && (expirationYear.dirty || expirationYear.touched)"
+                  style="background:none">
+                  Expiry year invalid or missing.
+                </mat-error>
 
-        </tr>
-    </table>
+              </td>
 
 
-   
+              <td>
+                <mat-form-field appearance="outline" style="width:100%">
+                  <mat-label>Enter Security Code:</mat-label>
+                  <input matInput formControlName="ccv" style="width:100%" placeholder="Enter Security Code">
+
+                </mat-form-field>
+
+                <mat-error *ngIf="ccv.invalid && (ccv.dirty || ccv.touched)" style="background:none">
+                  Security Code invalid or missing.
+                </mat-error>
+
+              </td>
+
+            </tr>
+          </table>
 
 
 
-    <mat-card-actions class="mt-2" style="background:none">
-      <button type="submit" style="width:100%" class="button-default button--secondary" cdkFocusInitial
-        *ngIf="(loading | async)!=true">
-        <span>{{inputData.action}} {{inputData.amount}} {{inputData.currency}}</span>
-      </button>
-      <button type="button" style="width:100%" class="button-default button--secondary" cdkFocusInitial
-        [disabled]="(loading | async)" *ngIf="(loading | async)">
-        <span>Processing ....</span>
-      </button>
-    </mat-card-actions>
-  </form>
+
+
+
+          <mat-card-actions class="mt-2" style="background:none">
+            <button type="submit" style="width:100%" class="button-default button--secondary" cdkFocusInitial
+              *ngIf="(loading | async)!=true">
+              <span>{{inputData.action}} {{inputData.amount}} {{inputData.currency}}</span>
+            </button>
+            <button type="button" style="width:100%" class="button-default button--secondary" cdkFocusInitial
+              [disabled]="(loading | async)" *ngIf="(loading | async)">
+              <span>Processing ....</span>
+            </button>
+          </mat-card-actions>
+        </form>
 
 
       </mat-expansion-panel>
