--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -20,58 +20,62 @@
   <mat-card-content>
     <mat-accordion class="example-headers-align" style="background:none">
 
-      <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
-        <mat-expansion-panel-header style="background:none">
-          <mat-panel-title>
-            <table>
-              <tr>
-                <td>
-                  <img [src]="'/assets/img/logo-mtn.png'" mat-card-avatar class="avatar" style="font-weight:bold">
+      
+      <div *ngIf="inputData.enableMomo=='true'">
+        <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
+          <mat-expansion-panel-header style="background:none">
+            <mat-panel-title>
+              <table>
+                <tr>
+                  <td>
+                    <img [src]="'/assets/img/logo-mtn.png'" mat-card-avatar class="avatar" style="font-weight:bold">
 
-                </td>
-                <th> Pay with Mobile Money</th>
-              </tr>
-            </table>
-          </mat-panel-title>
+                  </td>
+                  <th> Pay with Mobile Money</th>
+                </tr>
+              </table>
+            </mat-panel-title>
 
-        </mat-expansion-panel-header>
-        <hr>
-
-
-        <form autocomplete="off" [formGroup]="buyForm" class="mt-3" (ngSubmit)="submitMomo()" style="background:none">
-
+          </mat-expansion-panel-header>
+          <hr>
 
 
-          <mat-form-field appearance="outline" style="width:100%">
-            <mat-label>Enter mobile number</mat-label>
-            <input matInput formControlName="mobilephone" style="width:100%" placeholder="Enter mobile number">
+          <form autocomplete="off" [formGroup]="buyForm" class="mt-3" (ngSubmit)="submitMomo()" style="background:none">
 
-          </mat-form-field>
 
-          <mat-error *ngIf="mobilephone.invalid && (mobilephone.dirty || mobilephone.touched)" style="background:none">
-            <mat-error *ngIf="mobilephone.errors.required">
-              Mobile number is <strong>required</strong>
+
+            <mat-form-field appearance="outline" style="width:100%">
+              <mat-label>Enter mobile number</mat-label>
+              <input matInput formControlName="mobilephone" style="width:100%" placeholder="Enter mobile number">
+
+            </mat-form-field>
+
+            <mat-error *ngIf="mobilephone.invalid && (mobilephone.dirty || mobilephone.touched)"
+              style="background:none">
+              <mat-error *ngIf="mobilephone.errors.required">
+                Mobile number is <strong>required</strong>
+              </mat-error>
             </mat-error>
-          </mat-error>
 
 
 
 
 
-          <mat-card-actions class="mt-2" style="background:none">
-            <button type="submit" style="width:100%" class="button-default button--secondary" cdkFocusInitial
-              *ngIf="(loading | async)!=true">
-              <span>{{inputData.action}} {{inputData.amount}} {{inputData.currency}}</span>
-            </button>
-            <button type="button" style="width:100%" class="button-default button--secondary" cdkFocusInitial
-              [disabled]="(loading | async)" *ngIf="(loading | async)">
-              <span>Processing ....</span>
-            </button>
-          </mat-card-actions>
-        </form>
+            <mat-card-actions class="mt-2" style="background:none">
+              <button type="submit" style="width:100%" class="button-default button--secondary" cdkFocusInitial
+                *ngIf="(loading | async)!=true">
+                <span>{{inputData.action}} {{inputData.amount}} {{inputData.currency}}</span>
+              </button>
+              <button type="button" style="width:100%" class="button-default button--secondary" cdkFocusInitial
+                [disabled]="(loading | async)" *ngIf="(loading | async)">
+                <span>Processing ....</span>
+              </button>
+            </mat-card-actions>
+          </form>
 
 
-      </mat-expansion-panel>
+        </mat-expansion-panel>
+      </div>
 
       <mat-expansion-panel style="background:none" [expanded]="step === 1" (opened)="setStep(1)" hideToggle>
         <mat-expansion-panel-header class="row">
