--- a/src/app/payment-sdk-modal/payment-sdk-modal.component.html
+++ b/src/app/payment-sdk-modal/payment-sdk-modal.component.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>{{data.action}}</h1>
 <div mat-dialog-content>
   
-    <payment [inputData]="data" (payamentDetails)="payamentDetails($event)"></payment>
+    <payment [inputData]="data" (response)="payamentResponse($event)"></payment>
 </div>
 <div mat-dialog-actions style="float: right;margin-top:25px">
  
